--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             margin-bottom: 10px;
         }
         h2 {
-            border-bottom: 3px solid #0a025c;
+            border-bottom: 3px solid #4CAF50;
             padding-bottom: 8px;
             margin-top: 30px;
             font-size: 1.8em;
@@ -50,7 +50,7 @@
             margin: 8px 0;
         }
         .contact-info a {
-            color: #0a025c;
+            color: #4CAF50;
             text-decoration: none;
         }
         .skills {
@@ -65,7 +65,7 @@
             border-radius: 10px;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
-        .experience, .education, .skills-section {
+        .experience, .education, .skills-section, .certifications {
             display: flex;
             flex-direction: column;
             gap: 20px;
@@ -165,6 +165,23 @@
                 </ul>
             </div>
         </div>
+
+        <h2>Certificações</h2>
+        <div class="certifications">
+            <div class="item">
+                <div class="item-details">
+                    <strong>Microsoft Power Platform Fundamentals</strong>
+                </div>
+                <div class="item-date">Mai/2023</div>
+            </div>
+            <div class="item">
+                <div class="item-details">
+                    <strong>Excel VBA for Business</strong>
+                </div>
+                <div class="item-date">Set/2023</div>
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
